--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 # Created by https://www.gitignore.io/api/node,react,linux,macos,windows
 # Edit at https://www.gitignore.io/?templates=node,react,linux,macos,windows
 
+### JavaScript ###
+database.js
+
 ### Linux ###
 *~
 
